--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "valentine-web",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://kinfei.github.io/valentine-greeting",
+  "homepage": "https://kinfei.github.io/valentine-greeting/",
   "dependencies": {
     "@babel/core": "^7.16.0",
     "@pmmmwh/react-refresh-webpack-plugin": "^0.5.3",
