--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -23,6 +23,7 @@
     "@typescript-eslint/strict-boolean-expressions": 0,
     "@typescript-eslint/restrict-template-expressions": 0,
     "@typescript-eslint/triple-slash-reference": 0,
-    "@typescript-eslint/no-floating-promises": 0
+    "@typescript-eslint/no-floating-promises": 0,
+    "@typescript-eslint/comma-dangle": 0
   }
 }
