--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -24,6 +24,7 @@
     "@typescript-eslint/restrict-template-expressions": 0,
     "@typescript-eslint/triple-slash-reference": 0,
     "@typescript-eslint/no-floating-promises": 0,
-    "@typescript-eslint/comma-dangle": 0
+    "@typescript-eslint/comma-dangle": 0,
+    "@typescript-eslint/no-confusing-void-expression": 0
   }
 }
